# llmlab

./: .dockerignore  .env.example  .forecost.toml.example  .gitignore  .llmcast.toml.example  .llmlab.toml.example  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_SUMMARY.md  BUILD_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLI_AND_SDK.py  CONTRIBUTING.md  FINAL_SUMMARY.txt  LICENSE  Makefile  PRD.md  QUICK_START.md  README.md  X_POSTS_BATCH_1_UPDATED.md  __init__.py  demo.tape  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  publish-sdk.yml  release.yml
backend/: .env.example  API_SPEC.md  Dockerfile  README.md  __init__.py  alembic.ini  alerts.py  anomaly.py  auth.py  cache.py  config.py  database.py  logging_config.py  main.py  middleware.py  models.py  pytest.ini  requirements.txt  run.sh  schemas.py  security.py  verify_setup.py
backend/engines/: __init__.py  cost_engine.py  recommendations_engine.py
backend/migrations/: env.py
backend/migrations/versions/: 2024_01_01_001_initial_schema.py  2024_02_10_002_add_fired_alerts.py
backend/providers/: __init__.py  anthropic.py  anthropic_provider.py  base.py  google.py  google_provider.py  openai.py  openai_provider.py
backend/routes/: __init__.py  auth.py  budgets.py  costs.py  events.py  health.py  recommendations.py
backend/tests/: __init__.py  conftest.py  test_alerts.py  test_anomaly.py  test_api.py  test_auth.py  test_auto_tagging.py  test_cache.py  test_cache_endpoints.py  test_cache_integration.py  test_comparison.py  test_cost_engine.py  test_export.py  test_export_auth.py  test_forecast.py  test_health.py  test_heatmap.py  test_integration.py  test_logs.py  test_providers.py  test_proxy.py  test_streaming.py  test_tags.py  test_webhooks.py
backend/utils/: auth.py
cli/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  utils.py
cli/commands/: budget.py  config.py  export.py  init.py  optimize.py  status.py
cli/llmlab/: __init__.py  api.py  config.py  main.py  security.py
cli/llmlab/commands/: __init__.py  budget.py  configure.py  export.py  login.py  logout.py  optimize.py  proxy_key.py  stats.py
cli/llmlab_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/tests/: __init__.py  test_commands.py
docs/: API.md  API_SPEC.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DATABASE_SCHEMA.sql  DEPLOYMENT.md  DIAGRAMS.md  EXTENSIBILITY_AND_INTEGRATIONS.md  INDEX.md  PRD.md  SYSTEM_ARCHITECTURE.md
docs/guides/: BACKEND_MANIFEST.md  BUILD_COMPLETE.md  DEPLOYMENT.md  FILE_INDEX.md  LAUNCH_CHECKLIST.md  MVP_SPEC.md  QUICKSTART.md  START_HERE.md
docs/social/: POSTING_SCHEDULE.md  X_POSTS_BATCH_2.md
forecost/: __init__.py  cli.py  db.py  forecaster.py  interceptor.py  pricing.py  scope.py  tracker.py  tui.py
forecost/commands/: demo_cmd.py  export_cmd.py  forecast_cmd.py  init_cmd.py  optimize_cmd.py  reset_cmd.py  serve_cmd.py  status_cmd.py  track_cmd.py  watch_cmd.py
frontend/: .env.example  COMPONENTS.md  DEPLOY_CHECKLIST.md  Dockerfile  FILES_MANIFEST.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  jest.config.js  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/__tests__/: Button.test.tsx  Card.test.tsx  utils.test.ts
frontend/__tests__/app/: dashboard.test.tsx  logs.test.tsx
frontend/__tests__/components/: Button.test.tsx  CostCard.test.tsx
frontend/__tests__/lib/: api.test.ts  utils.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/logs/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: Alert.tsx  BarChart.tsx  BudgetProgressBar.tsx  Button.tsx  Card.tsx  ClientErrorBoundary.tsx  CostCard.tsx  DailyTable.tsx  ErrorBoundary.tsx  ForecastCard.tsx  Header.tsx  Input.tsx  LineChart.tsx  LogsTable.tsx  ModelChart.tsx  Navigation.tsx  ProviderComparison.tsx  RecommendationsPanel.tsx  UsageHeatmap.tsx
frontend/lib/: api.ts  utils.ts
frontend/lib/hooks/: useAuth.ts
frontend/pages/: _app.tsx  dashboard.tsx  index.tsx  login.tsx  settings.tsx  signup.tsx
frontend/styles/: globals.css
frontend/types/: index.ts
llmcast/: __init__.py  cli.py  db.py  forecaster.py  interceptor.py  pricing.py  scope.py  tracker.py  tui.py
llmcast/commands/: demo_cmd.py  export_cmd.py  forecast_cmd.py  init_cmd.py  optimize_cmd.py  reset_cmd.py  serve_cmd.py  status_cmd.py  track_cmd.py  watch_cmd.py
llmlab/: __init__.py  cli.py  db.py  forecaster.py  interceptor.py  pricing.py  scope.py  tracker.py  tui.py
llmlab/commands/: demo_cmd.py  export_cmd.py  forecast_cmd.py  init_cmd.py  optimize_cmd.py  reset_cmd.py  serve_cmd.py  status_cmd.py  track_cmd.py  watch_cmd.py
scripts/: test_real_sdk.py
sdk/: README.md  __init__.py  api_client.py  config.py  patch.py  pyproject.toml  tracker.py
sdk/tests/: test_patch.py
tests/: conftest.py  test_backend.py  test_cli.py  test_commands.py  test_db.py  test_forecaster.py  test_interceptor.py  test_pricing.py  test_production.py  test_sdk_compat.py  test_tracker.py
tests/benchmarks/: test_forecast_accuracy.py
