[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmlab"
version = "0.1.0"
description = "Know exactly what your AI project will cost. Local-first LLM cost forecasting that learns from your usage."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "LLMlab Contributors" }]
keywords = ["llm", "cost", "forecast", "openai", "anthropic", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.25.0",
    "tomli>=2.0.0; python_version < \"3.11\"",
]

[project.optional-dependencies]
forecast = ["statsmodels>=0.14", "numpy>=1.24"]
tui = ["textual>=0.50", "plotext>=5.0"]
llm = ["litellm>=1.0"]
all = ["llmlab[forecast,tui,llm]"]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy", "statsmodels>=0.14", "numpy>=1.24"]

[project.scripts]
llmlab = "llmlab.cli:main"

[project.urls]
Homepage = "https://github.com/ArivunidhiA/llmlab"
Issues = "https://github.com/ArivunidhiA/llmlab/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["benchmark: marks tests as benchmark/accuracy tests"]
