[metadata]
name = llmlab-cli
version = 0.1.0
description = Unified API gateway CLI for LLM providers
author = LLMLab
author_email = team@llmlab.dev
license = MIT
url = https://github.com/llmlab/llmlab-cli

[options]
packages = find:
python_requires = >=3.9
install_requires =
    click>=8.0.0
    httpx>=0.24.0
    cryptography>=41.0.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.0.0

[options.entry_points]
console_scripts =
    llmlab = llmlab.main:cli

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
